load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_python//python:py_library.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "opencc_lib",
    hdrs = [
        "//src:ConversionInspection.hpp",
        "//src:Export.hpp",
        "//src:ResourceProvider.hpp",
        "//src:SimpleConverter.hpp",
        "//src:opencc.h",
    ],
    data = [
        "//data/config",
        "//data/dictionary:binary_dictionaries",
        "//data/dictionary:text_dictionaries",
    ],
    strip_include_prefix = "src",
    deps = [
        "//src:opencc_lib",
    ],
)

alias(
    name = "opencc",
    actual = ":opencc_lib",
)

py_library(
    name = "py_opencc",
    deps = [
        "//python/opencc",
    ],
)
