load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_python//python:py_library.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

# npm packages for the Node.js js_test (//node/test:node_test) are linked here at
# the repo root, matching the pnpm-lock importer.
npm_link_all_packages(name = "node_modules")

cc_library(
    name = "opencc_lib",
    hdrs = [
        "//src:ConversionInspection.hpp",
        "//src:Export.hpp",
        "//src:ResourceProvider.hpp",
        "//src:SimpleConverter.hpp",
        "//src:opencc.h",
    ],
    data = [
        "//data/config",
        "//data/dictionary:binary_dictionaries",
        "//data/dictionary:text_dictionaries",
    ],
    strip_include_prefix = "src",
    deps = [
        "//src:opencc_lib",
    ],
)

alias(
    name = "opencc",
    actual = ":opencc_lib",
)

py_library(
    name = "py_opencc",
    deps = [
        "//python/opencc",
    ],
)
