"Open Chinese Convert"

module(
    name = "opencc",
    version = "1.1.9",
    compatibility_level = 1,
)

bazel_dep(name = "darts-clone", version = "0.32")
bazel_dep(name = "googletest", version = "1.15.0", dev_dependency = True)
bazel_dep(name = "marisa-trie", version = "0.2.6")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "pybind11_bazel", version = "2.12.0")
bazel_dep(name = "rapidjson", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_python", version = "0.34.0")
bazel_dep(name = "tclap", version = "1.2.5")


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//python/tests:requirements_lock.txt",
)
use_repo(pip, "pip")
