"Open Chinese Convert"

module(
    name = "opencc",
    version = "1.3.2",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "darts-clone", version = "0.32")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "marisa-trie", version = "0.3.1.bcr.1")
bazel_dep(name = "node_addon_api", version = "8.8.0.bcr.1")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "pybind11_bazel", version = "3.0.1")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "rules_node_addon", version = "1.0.1")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_python", version = "2.0.3")
bazel_dep(name = "rules_zig", version = "0.14.0")
bazel_dep(name = "tclap", version = "1.2.5.bcr.1")
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4", dev_dependency = True)

single_version_override(
    module_name = "marisa-trie",
    patches = ["//patches:marisa-flat-vector-zero-init.patch"],
    patch_strip = 1,
    version = "0.3.1.bcr.1",
)

single_version_override(
    module_name = "rules_python",
    patches = ["//patches:rules-python-write-unstamped-build-data.patch"],
    patch_strip = 1,
    version = "2.0.3",
)

# rules_node_addon is not in the Bazel Central Registry; fetch the release tarball.
archive_override(
    module_name = "rules_node_addon",
    integrity = "sha256-l7HlY7g3HFRGtgLfey08jNsCkHHK0K+5M1YYr3AVyhY=",
    strip_prefix = "rules_node_addon-1.0.1",
    urls = ["https://github.com/BYVoid/rules_node_addon/archive/refs/tags/v1.0.1.tar.gz"],
)

# Windows x64 node.lib import library for Zig/MinGW addon linking. node-addon-api
# comes from BCR (above) and the Node C headers come from the rules_nodejs Node
# toolchain (below); this import library is available from neither.
node_deps = use_extension("//node:deps.bzl", "node_deps")
use_repo(node_deps, "node_win_x64_lib")

# Windows Node headers and import libraries for rules_node_addon's native Windows
# addon build (rules_nodejs' Node toolchain does not ship C headers on Windows).
node_addon_windows = use_extension("@rules_node_addon//node_addon:windows.bzl", "node_addon_windows")
use_repo(node_addon_windows, "windows_node_api")

# Node toolchain providing the Node C headers (node_api.h). rules_node_addon's
# node_addon rule consumes these for the native addon; the Windows-Zig genrule
# unwraps the same headers into raw files (see //node:cc_headers_files.bzl).
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(include_headers = True)
use_repo(node, "nodejs_toolchains")

# npm dependencies for the Node.js js_test (mocha, node-gyp-build).
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    # The js_test uses the Bazel-built addon, so no native rebuilds are needed.
    lifecycle_hooks = {"*": []},
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy", dev_dependency = True)

zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.toolchain(zig_version = "0.15.2")
use_repo(zig, "zig_toolchains")

register_toolchains(
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_arm64",
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64",
    dev_dependency = True,
)
register_toolchains("@rules_zig//zig/target:all")
register_toolchains("@zig_toolchains//:all")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)
use_repo(python, "python_3_12", "pythons_hub")
register_toolchains("@pythons_hub//:all")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//python/tests:requirements_lock.txt",
)
use_repo(pip, "pip")
